--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="py-4 py-xl-5">
   <div class="container">
       <div class="text-center p-4 p-lg-5">
-          <p class="fw-bold text-primary mb-2">Websocket</p>
+          <p class="fw-bold text-primary mb-2">{{ text }}</p>
           <h1 class="fw-bold mb-4">Teste den Websocket mit einer einfachen Nachricht</h1><button class="btn btn-primary fs-5 me-2 py-2 px-4" type="button" (click)="onTest()">Test</button>
           <div class="col-12 mt-4">
               <div class="card mb-5">
